# superglm

./: .gitignore  .pre-commit-config.yaml  404.html  GENERATOR_STATUS.md  ISSUE_WORKING_WEIGHTS.md  LICENSE  PROGRESS.md  README.md  REML_IMPLEMENTATION_PLAN.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_test.py
.github/workflows/: ci.yml  dev-ci.yml  docs.yml
api/diagnostics/: index.html
api/families/: index.html
api/features/: index.html
api/inference/: index.html
api/model/: index.html
api/model_selection/: index.html
api/penalties/: index.html
api/plotting/: index.html
api/validation/: index.html
benchmarks/: benchmark_freq_gini.py  benchmark_personal_lines_serving.py  benchmark_tensor_ti_freq.py  benchmark_tensor_ti_mgcv.R  reml_benchmark_compare.py  reml_benchmark_harness.R  reml_benchmark_harness.py  scop_discrete_limit.py  scop_numerical_experiments.py  timing_30rep_compare.py  timing_30rep_mgcv.R  timing_30rep_superglm.py
benchmarks/results/: mgcv_30rep.json  superglm_30rep.json
docs/: index.md  reml_freml_paper_checklist.md
docs/api/: diagnostics.md  families.md  features.md  inference.md  model.md  model_selection.md  penalties.md  plotting.md  validation.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: deployment.md  families.md  features.md  fitting.md  interactions.md  monotone.md  optimization.md  results.md  scop-performance-prototype.md  validation.md  workflows.md
docs/javascripts/: mathjax.js
docs/notebooks/: mtpl2_frequency_walkthrough.ipynb  ordered_categorical_smoothing.ipynb  tweedie_profile_estimation.ipynb
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-04-18-api-autodoc-presentation-cleanup.md  2026-04-19-constraint-api.md
docs/superpowers/specs/: 2026-04-05-curve-editable-terms-design.md  2026-04-18-api-autodoc-presentation-design.md  2026-04-19-constraint-api-design.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/deployment/: index.html
guide/families/: index.html
guide/features/: index.html
guide/fitting/: index.html
guide/interactions/: index.html
guide/monotone/: index.html
guide/optimization/: index.html
guide/results/: index.html
guide/scop-performance-prototype/: index.html
guide/validation/: index.html
guide/workflows/: index.html
notebooks/mtpl2_frequency_walkthrough/: index.html
notebooks/ordered_categorical_smoothing/: index.html  ordered_categorical_smoothing.ipynb
notebooks/tweedie_profile_estimation/: index.html  tweedie_profile_estimation.ipynb
reml_freml_paper_checklist/: index.html
scratch/: bench_appendix_b.py  bench_mgcv_multi_m_parity.py  bench_mgcv_tensor_parity.py  benchmark_w_correction_error.py
scripts/: check_api_docs.py
search/: search_index.json
src/superglm/: __init__.py  _group_matrix_algebra.py  _group_matrix_core.py  _group_matrix_discretized.py  _group_matrix_kernels.py  _group_matrix_tabmat.py  _utils.py  constraints.py  cv.py  davies.py  debug_weights.py  diagnostics.py  discretize.py  distributions.py  dm_builder.py  families.py  group_matrix.py  inference.py  links.py  metrics.py  model.py  model_selection.py  model_tests.py  multi_penalty.py  nb_profile.py  plotting.py  reml.py  reml_optimizer.py  sklearn.py  summary.py  tweedie_profile.py  types.py  validation.py  wood_pvalue.py
src/superglm/_group_matrix/: __init__.py  (+5 more)
stylesheets/: extra.css
tests/: _datasets.py  conftest.py  test_api.py  test_binomial.py  test_bspline_smooth.py  test_cached_w_validation.py  test_categorical_ux.py  test_constrained_qp.py  test_constraint_api.py  test_constraint_types.py  test_core.py  test_cross_validate.py  test_curve_similarity.py  test_cv.py  test_diagnostics.py  test_discretize.py  test_discretize_fit.py  test_drop1.py  test_gaussian.py  test_hessian_ift.py  test_identifiability.py  test_import_compat.py  test_interaction_plots.py  test_interactions.py  test_irls_direct.py  test_lambda_policy.py  test_links.py  test_metrics.py  test_model_tests.py  test_monotone.py  test_monotone_constraints.py  test_monotone_fit.py  test_multi_penalty.py  test_nb2.py  test_ordered_categorical.py  test_path.py  test_penalties.py  test_plot_api.py  test_plot_comparison.py  test_plot_diagnostics.py  (+30 more)
tests/fixtures/: reml_parity_data_gamma.csv  reml_parity_data_poisson.csv  reml_parity_data_select.csv  reml_parity_reference.R
(+99 files in other folders)
