[project]
name = "superglm"
version = "0.1.0"
description = "Penalised GLMs for insurance pricing: group lasso, P-splines, Tweedie"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" },
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]
sklearn = [
    "scikit-learn>=1.3",
]
plot = [
    "matplotlib>=3.7",
]
all = [
    "superglm[dev,sklearn,plot]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/superglm"]

# ── ruff ────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "NPY",  # numpy-specific
]
ignore = [
    "E501",  # line too long (let formatter handle it)
    "N803",  # argument name should be lowercase (we use X, B, etc.)
    "N806",  # variable in function should be lowercase (same)
]

[tool.ruff.lint.isort]
known-first-party = ["superglm"]

# ── pytest ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that fit real models (deselect with '-m \"not slow\"')",
]

# ── mypy ────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["scipy.*", "matplotlib.*"]
ignore_missing_imports = true
