[project]
name = "superglm"
version = "0.4.0"
description = "Penalised GLMs for insurance pricing: group lasso, P-splines, Tweedie"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Max Hicks" },
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyarrow>=10.0",
    "matplotlib>=3.7",
    "glum>=3.0",
    "statsmodels>=0.14",
    "numba>=0.57",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]
sklearn = [
    "scikit-learn>=1.3",
]
plot = [
    "matplotlib>=3.7",
]
interactions = [
    "interpret>=0.7",
]
all = [
    "superglm[dev,sklearn,plot,interactions]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/superglm"]

# ── ruff ────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "NPY",  # numpy-specific
]
ignore = [
    "E501",  # line too long (let formatter handle it)
    "N802",  # function name should be lowercase (we use _compute_R_inv, _wrap_dense_X etc.)
    "N803",  # argument name should be lowercase (we use X, B, etc.)
    "N806",  # variable in function should be lowercase (same)
]

[tool.ruff.lint.isort]
known-first-party = ["superglm"]

# ── pytest ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
norecursedirs = ["scratch"]
markers = [
    "slow: marks tests that fit real models (deselect with '-m \"not slow\"')",
]

# ── coverage ────────────────────────────────────────────────────
[tool.coverage.run]
source = ["superglm"]
branch = true
omit = ["src/superglm/plotting.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

# ── mypy ────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["scipy.*", "matplotlib.*"]
ignore_missing_imports = true

[dependency-groups]
docs = [
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
]
